redirect to facebook #1

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ title: Metro Cebu North Force | Coming Soon
 					<!-- Logo
 					============================================= -->
 					<div id="logo" class="divcenter">
-						<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img class="divcenter" src="images/logo.png" alt="Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img class="divcenter" src="images/logo@2x.png" alt="Logo"></a>
+						<a href="{{ site.facebook }}" class="standard-logo" data-dark-logo="images/logo-dark.png"><img class="divcenter" src="images/logo.png" alt="Logo"></a>
+						<a href="{{ site.facebook }}" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img class="divcenter" src="images/logo@2x.png" alt="Logo"></a>
 				</div><!-- #logo end -->
 
 				</div>
