separated common files

--- a/index.html
+++ b/index.html
@@ -3,31 +3,7 @@ title: Metro Cebu North Force | Coming Soon
 ---
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
-<head>
-
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
-	<link rel="shortcut icon" href="manulife.ico">
-	
-
-	<!-- Stylesheets
-	============================================= -->
-	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="style.css" type="text/css" />
-	<link rel="stylesheet" href="css/dark.css" type="text/css" />
-	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
-	<link rel="stylesheet" href="css/animate.css" type="text/css" />
-	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-
-	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	<!-- Document Title
-	============================================= -->
-	<title>{{ page.title }}</title>
-
-</head>
+{% include head.html %}
 
 <body class="stretched">
 
@@ -74,8 +50,8 @@ title: Metro Cebu North Force | Coming Soon
 					<!-- Logo
 					============================================= -->
 					<div id="logo" class="divcenter">
-						<a href="{{ site.facebook }}" class="standard-logo" data-dark-logo="images/logo-dark.png"><img class="divcenter" src="images/logo.png" alt="Logo"></a>
-						<a href="{{ site.facebook }}" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img class="divcenter" src="images/logo@2x.png" alt="Logo"></a>
+						<a href="{{ site.facebook }}" class="standard-logo" data-dark-logo="/images/logo-dark.png"><img class="divcenter" src="/images/logo.png" alt="Logo"></a>
+						<a href="{{ site.facebook }}" class="retina-logo" data-dark-logo="/images/logo-dark@2x.png"><img class="divcenter" src="/images/logo@2x.png" alt="Logo"></a>
 				</div><!-- #logo end -->
 
 				</div>
@@ -159,12 +135,12 @@ title: Metro Cebu North Force | Coming Soon
 
 	<!-- External JavaScripts
 	============================================= -->
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/plugins.js"></script>
+	<script type="text/javascript" src="/js/jquery.js"></script>
+	<script type="text/javascript" src="/js/plugins.js"></script>
 
 	<!-- Footer Scripts
 	============================================= -->
-	<script type="text/javascript" src="js/functions.js"></script>
+	<script type="text/javascript" src="/js/functions.js"></script>
 
 	<script>
 		jQuery(document).ready( function($){
