added analytics with amp #10

--- a/$/index.html
+++ b/$/index.html
@@ -7,6 +7,8 @@ title: Metro Cebu North Force
 
 <body class="stretched">
 
+	{% include amp-analytics.html %}
+
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="clearfix">
