--- a/$/services/index.html
+++ b/$/services/index.html
@@ -6,6 +6,7 @@ title: Services | Metro Cebu North Force
 {% include head.html %}
 
 <body class="stretched">
+    {% include amp-analytics.html %}
 
 	<!-- Document Wrapper
 	============================================= -->
