--- a/$/about-us/index.html
+++ b/$/about-us/index.html
@@ -7,6 +7,8 @@ title: About Us | Metro Cebu North Force
 
 <body class="stretched">
 
+    {% include amp-analytics.html %}
+
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="clearfix">
