--- a/$/index.html
+++ b/$/index.html
@@ -24,8 +24,8 @@ title: Metro Cebu North Force
 						<div class="swiper-slide dark" style="background-image: url('/images/slider/swiper/1.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
-									<h2 data-caption-animate="fadeInUp">Welcome to Canvas</h2>
-									<p data-caption-animate="fadeInUp" data-caption-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on our Canvas.</p>
+									<h2 data-caption-animate="fadeInUp">Metro Cebu North Force</h2>
+									<p data-caption-animate="fadeInUp" data-caption-delay="200">We are Manulife's most dynamic team. Be One with the Force. Join Us Today!</p>
 								</div>
 							</div>
 						</div>
