updated dark theme and added some new photos #1

--- a/$/index.html
+++ b/$/index.html
@@ -21,34 +21,11 @@ title: Metro Cebu North Force
 
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url('/images/slider/swiper/1.jpg');">
+						<div class="swiper-slide dark" style="background-image: linear-gradient(rgba(76,175,80, 0.2), rgba(46,125,50, 0.2)),url('/images/slider/swiper/1.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h2 data-caption-animate="fadeInUp">Metro Cebu North Force</h2>
-									<p data-caption-animate="fadeInUp" data-caption-delay="200">We are Manulife's most dynamic team. Be One with the Force. Join Us Today!</p>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide dark">
-							<div class="container clearfix">
-								<div class="slider-caption slider-caption-center">
-									<h2 data-caption-animate="fadeInUp">Beautifully Flexible</h2>
-									<p data-caption-animate="fadeInUp" data-caption-delay="200">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Powerful Layout with Responsive functionality that can be adapted to any screen size.</p>
-								</div>
-							</div>
-							<div class="video-wrap">
-								<video poster="/images/videos/explore.jpg" preload="auto" loop autoplay muted>
-									<source src='/images/videos/explore.mp4' type='video/mp4' />
-									<source src='/images/videos/explore.webm' type='video/webm' />
-								</video>
-								<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
-							</div>
-						</div>
-						<div class="swiper-slide" style="background-image: url('/images/slider/swiper/3.jpg'); background-position: center top;">
-							<div class="container clearfix">
-								<div class="slider-caption">
-									<h2 data-caption-animate="fadeInUp">Great Performance</h2>
-									<p data-caption-animate="fadeInUp" data-caption-delay="200">You'll be surprised to see the Final Results of your Creation &amp; would crave for more.</p>
+									<p data-caption-animate="fadeInUp" data-caption-delay="200">We are Manulife's most dynamic team of Insurance Advisers and Agency Leaders. Be One with the Force. Join Us Today!</p>
 								</div>
 							</div>
 						</div>
@@ -69,8 +46,8 @@ title: Metro Cebu North Force
 
 				<div class="promo promo-full promo-border header-stick bottommargin-lg">
 					<div class="container clearfix">
-						<h3>Call us today at <span>+91.22.57412541</span> or Email us at <span>support@canvas.com</span></h3>
-						<span>We strive to provide Our Customers with Top Notch Support to make their Theme Experience Wonderful</span>
+						<h3>Call us today at <span>(63)32 231.9177</span> to get more info</h3>
+						<span>We strive to provide Our Customers with Top Notch Support to make their Dreams a Reality</span>
 						<a href="#" class="button button-reveal button-xlarge button-rounded tright"><i class="icon-angle-right"></i><span>Browse Now</span></a>
 					</div>
 				</div>
@@ -82,8 +59,8 @@ title: Metro Cebu North Force
 							<div class="fbox-icon">
 								<a href="#"><i class="icon-screen i-alt"></i></a>
 							</div>
-							<h3>Responsive Layout</h3>
-							<p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
+							<h3>Shape your future</h3>
+							<p>Anything is possible when it comes to your career growth at Manulife. You’ll find all the support you need to reach your goals.</p>
 						</div>
 					</div>
 
@@ -92,8 +69,8 @@ title: Metro Cebu North Force
 							<div class="fbox-icon">
 								<a href="#"><i class="icon-eye i-alt"></i></a>
 							</div>
-							<h3>Retina Ready Graphics</h3>
-							<p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
+							<h3>Global Exposure</h3>
+							<p>You’ll work with a global team of colleagues who share your ambition to build a career that brings challenge and opportunity through impactful, transformative and rewarding work.</p>
 						</div>
 					</div>
 
@@ -102,8 +79,8 @@ title: Metro Cebu North Force
 							<div class="fbox-icon">
 								<a href="#"><i class="icon-beaker i-alt"></i></a>
 							</div>
-							<h3>Powerful Performance</h3>
-							<p>Canvas includes tons of optimized code that are completely customizable and deliver unmatched fast performance.</p>
+							<h3>Be A Change-maker</h3>
+							<p>We like to think of our employees as change-makers. They’re innovative, resourceful and they thrive on pushing our company forward with fresh ideas. </p>
 						</div>
 					</div>
 
@@ -114,8 +91,8 @@ title: Metro Cebu North Force
 							<div class="fbox-icon">
 								<a href="#"><i class="icon-stack i-alt"></i></a>
 							</div>
-							<h3>Premium Sliders Included</h3>
-							<p>Canvas included 20+ custom designed Slider Pages with Premium Sliders like Layer, Revolution, Swiper &amp; others.</p>
+							<h3>Enjoy a work-life balance</h3>
+							<p>From flexible working arrangements to modern offices that promote collaboration and mobility, we’re always looking for new ways to help our employees be happy and healthy.</p>
 						</div>
 					</div>
 
@@ -124,8 +101,8 @@ title: Metro Cebu North Force
 							<div class="fbox-icon">
 								<a href="#"><i class="icon-tint i-alt"></i></a>
 							</div>
-							<h3>Unlimited Color Options</h3>
-							<p>Change the color scheme of the Theme in a flash just by changing the 6-digit HEX code in the colors.php file.</p>
+							<h3>Maximum Potential</h3>
+							<p>We strengthen our sales force team by providing them opportunities for business and personal growth. </p>
 						</div>
 					</div>
 
@@ -134,13 +111,13 @@ title: Metro Cebu North Force
 							<div class="fbox-icon">
 								<a href="#"><i class="icon-text-width i-alt"></i></a>
 							</div>
-							<h3>CUSTOMIZABLE FONTS</h3>
-							<p>Use any Font you like from Google Web Fonts, Typekit or other Web Fonts. They will blend in perfectly.</p>
+							<h3>Professional Development</h3>
+							<p>We invest in the development of our people, and reward superior performance.</p>
 						</div>
 					</div>
 
 					<div class="clear"></div><div class="line"></div>
-
+{% comment %}
 					<div id="oc-clients-full" class="owl-carousel image-carousel carousel-widget" data-margin="30" data-nav="false" data-loop="true" data-autoplay="5000" data-pagi="false" data-items-xxs="2" data-items-xs="3" data-items-sm="4" data-items-md="5" data-items-lg="6">
 
 						<a href="#"><img src="/images/clients/1.png" alt="Clients"></a>
@@ -157,7 +134,7 @@ title: Metro Cebu North Force
 						<a href="#"><img src="/images/clients/12.png" alt="Clients"></a>
 
 					</div>
-
+{% endcomment %}
 				</div>
 
 			</div>
