--- a/$/about-us/index.html
+++ b/$/about-us/index.html
@@ -40,7 +40,7 @@ title: About Us | Metro Cebu North Force
 
                         <div class="heading-block center nobottomborder">
                             <h2>Interactive Office Environment</h2>
-                            <span>We value Work Ethics &amp; Environment as it helps in creating a Creative Thinktank</span>
+                            <span>Manulife’s strong leadership team is composed of men and women who are experts in their fields.</span>
                         </div>
 
                         <div class="fslider" data-pagi="false" data-animation="fade">
@@ -56,40 +56,34 @@ title: About Us | Metro Cebu North Force
 
                     </div>
 
-                    <div class="col_one_fourth center" data-animate="bounceIn">
+                    <div class="col_one_third center" data-animate="bounceIn">
                         <i class="i-plain i-xlarge divcenter nobottommargin icon-users"></i>
-                        <div class="counter counter-large" style="color: #3498db;"><span data-from="100" data-to="8465" data-refresh-interval="50" data-speed="2000"></span></div>
+                        <div class="counter counter-large" style="color: #3498db;"><span data-from="100" data-to="18051" data-refresh-interval="5" data-speed="1500"></span></div>
                         <h5>Clients Served</h5>
                     </div>
 
-                    <div class="col_one_fourth center" data-animate="bounceIn" data-delay="200">
-                        <i class="i-plain i-xlarge divcenter nobottommargin icon-code"></i>
-                        <div class="counter counter-large" style="color: #e74c3c;"><span data-from="100" data-to="56841" data-refresh-interval="50" data-speed="2500"></span></div>
-                        <h5>Lines of Code</h5>
-                    </div>
-
-                    <div class="col_one_fourth center" data-animate="bounceIn" data-delay="400">
+                    <div class="col_one_third center" data-animate="bounceIn" data-delay="400">
                         <i class="i-plain i-xlarge divcenter nobottommargin icon-briefcase"></i>
                         <div class="counter counter-large" style="color: #16a085;"><span data-from="100" data-to="2154" data-refresh-interval="50" data-speed="3500"></span></div>
-                        <h5>No. of Projects</h5>
+                        <h5>Advisers and Agents</h5>
                     </div>
 
-                    <div class="col_one_fourth center col_last" data-animate="bounceIn" data-delay="600">
+                    <div class="col_one_third center col_last" data-animate="bounceIn" data-delay="600">
                         <i class="i-plain i-xlarge divcenter nobottommargin icon-cup"></i>
                         <div class="counter counter-large" style="color: #9b59b6;"><span data-from="100" data-to="874" data-refresh-interval="30" data-speed="2700"></span></div>
-                        <h5>Cups of Coffee</h5>
+                        <h5>Parties Held</h5>
                     </div>
 
                     <div class="clear"></div>
 
                     <div class="promo promo-light bottommargin">
-                        <h3>Call us today at <span>+91.22.57412541</span> or Email us at <span>support@canvas.com</span></h3>
-                        <span>We strive to provide Our Customers with Top Notch Support to make their Theme Experience Wonderful</span>
-                        <a href="#" class="button button-xlarge button-rounded">Start Browsing</a>
+                        <h3>Email us at <span>{{ site.email }}</span></h3>
+                        <span>We'd like to hear from you. If there is anything we can help you with?</span>
+                        <a href="/$/activities/" class="button button-xlarge button-rounded">Our Activities</a>
                     </div>
 
                     <div class="heading-block center">
-                        <h2>Canvas Thinktank</h2>
+                        <h2>Metro Cebu North Force</h2>
                         <span>Our Team Members who have contributed immensely to our Growth</span>
                     </div>
 
