#2 about us updates. updated also for #9 themes

--- a/$/about-us/index.html
+++ b/$/about-us/index.html
@@ -92,24 +92,24 @@ title: About Us | Metro Cebu North Force
                         <div class="col-md-6 bottommargin">
                             <div class="team team-list clearfix">
                                 <div class="team-image">
-                                    <img src="/images/team/3.jpg" alt="Boy Archie">
+                                    <img src="/images/team/boyar.jpg" alt="Boy Archie">
                                 </div>
                                 <div class="team-desc">
-                                    <div class="team-title"><h4>Boy Archie</h4><span>CEO</span></div>
+                                    <div class="team-title"><h4>Boy Archie</h4><span>Branch Head</span></div>
                                     <div class="team-content">
-                                        <p>Carbon emissions reductions giving, legitimize amplify non-partisan Aga Khan. Policy dialogue assessment expert free-speech cornerstone disruptor freedom. Cesar Chavez empower.</p>
+                                        <p>Former District Director of Toastmaster's International. </p>
                                     </div>
-                                    <a href="#" class="social-icon si-rounded si-small si-light si-facebook">
+                                    <a href="https://www.facebook.com/aristides.archie" class="social-icon si-rounded si-small si-light si-facebook">
                                         <i class="icon-facebook"></i>
                                         <i class="icon-facebook"></i>
                                     </a>
-                                    <a href="#" class="social-icon si-rounded si-small si-light si-twitter">
+                                    <a href="https://www.facebook.com/lgmboy.archie" class="social-icon si-rounded si-small si-light si-twitter">
                                         <i class="icon-twitter"></i>
                                         <i class="icon-twitter"></i>
                                     </a>
-                                    <a href="#" class="social-icon si-rounded si-small si-light si-gplus">
-                                        <i class="icon-gplus"></i>
-                                        <i class="icon-gplus"></i>
+                                    <a href="mailto:boy_archie@manulife.com.ph" class="social-icon si-rounded si-small si-light si-gplus">
+                                        <i class="icon-envelope"></i>
+                                        <i class="icon-envelope"></i>
                                     </a>
                                 </div>
                             </div>
@@ -118,10 +118,10 @@ title: About Us | Metro Cebu North Force
                         <div class="col-md-6 bottommargin">
                             <div class="team team-list clearfix">
                                 <div class="team-image">
-                                    <img src="/images/team/2.jpg" alt="Josh Clark">
+                                    <img src="/images/team/unit-manager.jpg" alt="Jane Doe">
                                 </div>
                                 <div class="team-desc">
-                                    <div class="team-title"><h4>Josh Clark</h4><span>Co-Founder</span></div>
+                                    <div class="team-title"><h4>Jane Doe</h4><span>Unit Manager</span></div>
                                     <div class="team-content">
                                         <p>Carbon emissions reductions giving, legitimize amplify non-partisan Aga Khan. Policy dialogue assessment expert free-speech cornerstone disruptor freedom. Cesar Chavez empower.</p>
                                     </div>
@@ -147,7 +147,7 @@ title: About Us | Metro Cebu North Force
                                     <img src="/images/team/8.jpg" alt="Mary Jane">
                                 </div>
                                 <div class="team-desc">
-                                    <div class="team-title"><h4>Mary Jane</h4><span>Sales</span></div>
+                                    <div class="team-title"><h4>Mary Jane</h4><span>Senior Financial Adviser</span></div>
                                     <div class="team-content">
                                         <p>Carbon emissions reductions giving, legitimize amplify non-partisan Aga Khan. Policy dialogue assessment expert free-speech cornerstone disruptor freedom. Cesar Chavez empower.</p>
                                     </div>
@@ -170,10 +170,10 @@ title: About Us | Metro Cebu North Force
                         <div class="col-md-6 bottommargin">
                             <div class="team team-list clearfix">
                                 <div class="team-image">
-                                    <img src="/images/team/4.jpg" alt="Nix Maxwell">
+                                    <img src="/images/team/agent.jpg" alt="Nix Maxwell">
                                 </div>
                                 <div class="team-desc">
-                                    <div class="team-title"><h4>Nix Maxwell</h4><span>Support</span></div>
+                                    <div class="team-title"><h4>Agent Orange</h4><span>Agent</span></div>
                                     <div class="team-content">
                                         <p>Carbon emissions reductions giving, legitimize amplify non-partisan Aga Khan. Policy dialogue assessment expert free-speech cornerstone disruptor freedom. Cesar Chavez empower.</p>
                                     </div>
@@ -209,10 +209,10 @@ title: About Us | Metro Cebu North Force
                                         <a href="#"><img src="/images/testimonials/3.jpg" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
-                                        <p>Similique fugit repellendus expedita excepturi iure perferendis provident quia eaque. Repellendus, vero numquam?</p>
+                                        <p>Insurance is important for a family and Manulife is a reliable company!</p>
                                         <div class="testi-meta">
-                                            Steve Jobs
-                                            <span>Apple Inc.</span>
+                                            Sharon
+                                            <span>Hongkong</span>
                                         </div>
                                     </div>
                                 </div>
@@ -221,10 +221,10 @@ title: About Us | Metro Cebu North Force
                                         <a href="#"><img src="/images/testimonials/2.jpg" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
-                                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                        <p>Choose a job you love, and you will never have to work a day in your life</p>
                                         <div class="testi-meta">
-                                            Collis Ta'eed
-                                            <span>Envato Inc.</span>
+                                            Confucius
+                                            <span>&nbsp;</span>
                                         </div>
                                     </div>
                                 </div>
@@ -233,10 +233,34 @@ title: About Us | Metro Cebu North Force
                                         <a href="#"><img src="/images/testimonials/1.jpg" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
-                                        <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
+                                        <p>If a child, a spouse, a life partner, or a parent depends on you and your income, you need a life insurance</p>
                                         <div class="testi-meta">
-                                            Boy Archie
-                                            <span>XYZ Inc.</span>
+                                            Suze Orman
+                                            <span>www.suzeorman.com</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="testi-image">
+                                        <a href="#"><img src="/images/testimonials/1.jpg" alt="Customer Testimonails"></a>
+                                    </div>
+                                    <div class="testi-content">
+                                        <p>Great things in business are never done by one person. They're done by a team of people</p>
+                                        <div class="testi-meta">
+                                            Steve Jobs
+                                            <span>Apple Inc.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="testi-image">
+                                        <a href="#"><img src="/images/testimonials/1.jpg" alt="Customer Testimonails"></a>
+                                    </div>
+                                    <div class="testi-content">
+                                        <p>The most basic human desire is to feel like you belong. Fitting in is important</p>
+                                        <div class="testi-meta">
+                                            Simon Sinek
+                                            <span>www.startwithwhy.com</span>
                                         </div>
                                     </div>
                                 </div>
