--- a/$/services/index.html
+++ b/$/services/index.html
@@ -81,13 +81,13 @@ title: Services | Metro Cebu North Force
                     <div class="container clearfix">
 
                         <div class="heading-block center">
-                            <h2>Easy Configurable Options.</h2>
-                            <span>Choose from a wide array of Options for your best matched Customizations</span>
+                            <h2>We'll Help You All The Way.</h2>
+                            <span>Talk to your trusted friendly financial adviser for a broader insight.</span>
                         </div>
 
                         <div class="col_full">
 
-                            <img data-animate="fadeIn" class="aligncenter" src="/images/services/macbook.png" alt="Macbook">
+                            <img data-animate="fadeIn" class="aligncenter" src="/images/services/7.jpg" alt="Macbook">
 
                         </div>
 
@@ -97,8 +97,8 @@ title: Services | Metro Cebu North Force
                                 <div class="fbox-icon">
                                     <a href="#"><i class="i-alt">1.</i></a>
                                 </div>
-                                <h3>Choose a Product.</h3>
-                                <p>Perferendis, nam. Eum aperiam vel animi beatae corporis dignissimos, molestias, placeat, maxime optio ipsam nostrum atque quidem.</p>
+                                <h3>Talk to A Financial Adviser</h3>
+                                <p>Before you start your journey, you need to talk to a financial adviser and come up with the best plan for you.</p>
                             </div>
 
                         </div>
@@ -109,8 +109,8 @@ title: Services | Metro Cebu North Force
                                 <div class="fbox-icon">
                                     <a href="#"><i class="i-alt">2.</i></a>
                                 </div>
-                                <h3>Enter Shipping Info.</h3>
-                                <p>Saepe qui enim at animi. Repellendus, blanditiis doloremque asperiores reprehenderit deleniti. Ipsam nam accusantium ex!</p>
+                                <h3>Choose A Plan</h3>
+                                <p>With the help of your trusted financial adviser, choose the best plan that suites your needs.</p>
                             </div>
 
                         </div>
@@ -121,8 +121,8 @@ title: Services | Metro Cebu North Force
                                 <div class="fbox-icon">
                                     <a href="#"><i class="i-alt">3.</i></a>
                                 </div>
-                                <h3>Complete your Payment.</h3>
-                                <p>Necessitatibus accusamus, inventore atque commodi, animi architecto ea sed, suscipit tempora ex deleniti quae. Consectetur, sint velit.</p>
+                                <h3>Enjoy A Worry-free life</h3>
+                                <p>Once everything is set, enjoy life to the fullest, knowing everything is taken cared of.</p>
                             </div>
 
                         </div>
@@ -134,19 +134,18 @@ title: Services | Metro Cebu North Force
                 <div class="container clearfix">
 
                     <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
-                        <canvas id="chart-doughnut"></canvas>
+                        <img src="/images/services/health.jpg" alt="Personal health Plan">
                     </div>
 
                     <div class="col_three_fifth nobottommargin col_last">
 
                         <div class="heading-block">
-                            <h3>Powerful insights to help grow your business.</h3>
-                            <span>Reports let you easily track and analyze your product sales, orders, and payments.</span>
+                            <h3>Personal Health Plans</h3>
+                            <span>Protect Life's Most Important Asset</span>
                         </div>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
+                        <p>Unexpected healthcare expenses can take up a great bulk of your savings, and your health and medical insurance coverage may not be enough.</p>
+                        <p>With Manulife's health insurance plans, you can enjoy peace of mind knowing you and your family are taken care of. Our plans let you invest in your health today, so you are free to pursue what you want to do now and in the future.</p>
 
                         <a href="#">Learn more &rarr;</a>
 
@@ -157,29 +156,78 @@ title: Services | Metro Cebu North Force
                     <div class="col_three_fifth">
 
                         <div class="heading-block">
-                            <h3>Advanced store statistics.</h3>
-                            <span>Benchmarking your website's performance helps you make great choices for your business.</span>
+                            <h3>Personal Education Plans</h3>
+                            <span>Nothing is more important thank your child's future well-being. With quality education from the best schools, they become open to a world of choices and opportunities to lead the life they deserve.</span>
                         </div>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
+                        <p>With the rising cost of tuition every year, now is the best time to start planning for your child's education. Manulife Education Builder is an education plan in the Philippines that looks out for your child's future, while giving you opportunities for financial growth.</p>
 
                         <a href="#">Learn more &rarr;</a>
 
                     </div>
 
                     <div class="col_two_fifth topmargin col_last" style="min-height: 350px">
-                        <canvas id="chart-radar"></canvas>
+                        <img src="/images/services/education.jpg" alt="Personal Education Plan">
+                    </div>
+
+                    <div class="clear"></div><div class="line"></div>
+
+                    <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
+                        <img src="/images/services/retirement.jpg" alt="Personal Retirement Plan">
+                    </div>
+
+                    <div class="col_three_fifth nobottommargin col_last">
+
+                        <div class="heading-block">
+                            <h3>Personal Retirement Plans</h3>
+                            <span>Spend your retirement years with financial peace of mind.</span>
+                        </div>
+
+                        <p>There is never a bad time to start planning for your retirement, no matter how early or far along you are in your professional journey. The rule is to start as soon as you can.</p>
+                        <p>To secure a comfortable retirement in the coming years, start with Manulife's retirement plan. We can tailor-fit our insurance plans to suit your unique financial needs and budget. With the right retirement plan, you can build your savings and live the retirement you deserve.</p>
+
+                        <a href="#">Learn more &rarr;</a>
+
+                    </div>
+
+                    <div class="clear"></div><div class="line"></div>
+                    
+                    <div class="col_three_fifth">
+
+                        <div class="heading-block">
+                            <h3>Personal Wealth Plans</h3>
+                            <span>If you are starting to build your wealth, or already a seasoned investor, Manulife wealth insurance plans can help you grow and diversify your hard-earned money.</span>
+                        </div>
+
+                        <p>Our world-class wealth protection insurance investment products, together with our award-winning fund managers will make sure that as you go further in life, your investments will do to.</p>
+
+                        <a href="#">Learn more &rarr;</a>
+
+                    </div>
+
+                    <div class="col_two_fifth topmargin col_last" style="min-height: 350px">
+                        <img src="/images/services/wealth.jpg" alt="Personal Wealth Plan">
+                    </div>
+
+                    <div class="clear"></div><div class="line"></div>
+                    
+                    <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
+                        <img src="/images/services/protection.jpg" alt="Personal Protection Plan">
+                    </div>
+
+                    <div class="col_three_fifth nobottommargin col_last">
+
+                        <div class="heading-block">
+                            <h3>Personal Protection Plans</h3>
+                            <span>We can't tell what will happen in the future so it is best to be ready for it.</span>
+                        </div>
+
+                        <p>Protect yourself and your loved ones from the unexpected with the right Manulife protection plan.</p>
+                        <a href="#">Learn more &rarr;</a>
+
                     </div>
 
                 </div>
-
-                <a class="button button-full center tright topmargin footer-stick">
-                    <div class="container clearfix">
-                        Need help with your Account? <strong>Start here</strong> <i class="icon-caret-right" style="top:4px;"></i>
-                    </div>
-                </a>
 
             </div>
 
