--- a/$/contact-us/index.html
+++ b/$/contact-us/index.html
@@ -29,9 +29,11 @@ title: Contact Us | Metro Cebu North Force
             </div>
 
         </section><!-- #page-title end -->
+        {% comment %}
         <!-- Google Map
 		============================================= -->
-		<section id="google-map" class="gmap slider-parallax"></section>
+        <section id="google-map" class="gmap slider-parallax"></section>
+        {% endcomment %}
 
 		<!-- Content
 		============================================= -->
@@ -81,10 +83,11 @@ title: Contact Us | Metro Cebu North Force
                                     <label for="template-contactform-service">Services</label>
                                     <select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
                                         <option value="">-- Select One --</option>
-                                        <option value="Wordpress">Wordpress</option>
-                                        <option value="PHP / MySQL">PHP / MySQL</option>
-                                        <option value="HTML5 / CSS3">HTML5 / CSS3</option>
-                                        <option value="Graphic Design">Graphic Design</option>
+                                        <option value="protection">Personal Protection Plan</option>
+                                        <option value="retirement">Personal Retirement Plan</option>
+                                        <option value="health">Personal Health Plan</option>
+                                        <option value="education">Personal Education Plan</option>
+                                        <option value="wealth">Personal Wealth Plan</option>
                                     </select>
                                 </div>
 
@@ -115,25 +118,15 @@ title: Contact Us | Metro Cebu North Force
                         <address>
                             <strong>Headquarters:</strong><br>
                             Unit 101, Ground Floor Keppel Center, <br>
-                            Samar Loop cor Cardinal Rosales Avenue, <br>
-                            Cebu Business Park, <br>
+                            Samar Loop cor Cardinal Rosales Avenue, Cebu Business Park, <br>
                             Cebu City, PH, 6000
                         </address>
-                        <abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
-                        <abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
-                        <abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+                        <abbr title="Phone Number"><strong>Phone:</strong></abbr> (63) 32 231917<br>
+                        <abbr title="Fax"><strong>Fax:</strong></abbr> (63) 32 231917<br>
+                        <abbr title="Email Address"><strong>Email:</strong></abbr> {{ site.email }}
 
                         <div class="widget noborder notoppadding">
-
-                            <div class="fslider customjs testimonial twitter-scroll twitter-feed" data-username="envato" data-count="3" data-animation="slide" data-arrows="false">
-                                <i class="i-plain i-small color icon-twitter nobottommargin" style="margin-right: 15px;"></i>
-                                <div class="flexslider" style="width: auto;">
-                                    <div class="slider-wrap">
-                                        <div class="slide"></div>
-                                    </div>
-                                </div>
-                            </div>
-
+                                <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FMetroCebuNorthForceBranchManulife&amp;width=240&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:240px; height:290px;" allowTransparency="true"></iframe>
                         </div>
 
                         <div class="widget noborder notoppadding">
