moved to netlify

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Metro Cebu North Force | Coming Soon
+title: Metro Cebu North Force
 ---
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
@@ -13,54 +13,30 @@ title: Metro Cebu North Force | Coming Soon
 	============================================= -->
 	<div id="wrapper" class="clearfix">
 
-		<!-- Top Bar
-		============================================= -->
-		<div id="top-bar">
+		{% include header.html %}
 
-			<div class="container clearfix">
+		<section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix">
 
-				<div class="col_half nobottommargin">
+			<div class="slider-parallax-inner">
 
+				<div class="swiper-container swiper-parent">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide dark" style="background-image: linear-gradient(rgba(76,175,80, 0.2), rgba(46,125,50, 0.2)),url('/images/slider/swiper/1.jpg');">
+							<div class="container clearfix">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-caption-animate="fadeInUp">Metro Cebu North Force</h2>
+									<p data-caption-animate="fadeInUp" data-caption-delay="200">We are Manulife's most dynamic team of Insurance Advisers and Agency Leaders. Be One with the Force. Join Us Today!</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="slider-arrow-left"><i class="icon-angle-left"></i></div>
+					<div id="slider-arrow-right"><i class="icon-angle-right"></i></div>
+					<div id="slide-number"><div id="slide-number-current"></div><span>/</span><div id="slide-number-total"></div></div>
 				</div>
-
-				<div class="col_half fright col_last nobottommargin">
-
-					<!-- Top Social
-					============================================= -->
-					<div id="top-social">
-						<ul>
-							<li><a href="{{ site.facebook }}" class="si-facebook"><span class="ts-icon"><i class="icon-facebook"></i></span><span class="ts-text">Facebook</span></a></li>
-							<li><a href="tel:{{ site.tel }}" class="si-call"><span class="ts-icon"><i class="icon-call"></i></span><span class="ts-text">{{ site.tel }}</span></a></li>
-							<li><a href="mailto:{{ site.info }}" class="si-email3"><span class="ts-icon"><i class="icon-envelope-alt"></i></span><span class="ts-text">{{ site.info }}</span></a></li>
-						</ul>
-					</div><!-- #top-social end -->
-
-				</div>
-
 			</div>
 
-		</div><!-- #top-bar end -->
-
-		<!-- Header
-		============================================= -->
-		<header id="header" class="no-sticky">
-
-			<div id="header-wrap">
-
-				<div class="container clearfix">
-
-					<!-- Logo
-					============================================= -->
-					<div id="logo" class="divcenter">
-						<a href="{{ site.facebook }}" class="standard-logo" data-dark-logo="/images/logo-dark.png"><img class="divcenter" src="/images/logo.png" alt="Logo"></a>
-						<a href="{{ site.facebook }}" class="retina-logo" data-dark-logo="/images/logo-dark@2x.png"><img class="divcenter" src="/images/logo@2x.png" alt="Logo"></a>
-				</div><!-- #logo end -->
-
-				</div>
-
-			</div>
-
-		</header><!-- #header end -->
+		</section>
 
 		<!-- Content
 		============================================= -->
@@ -68,66 +44,104 @@ title: Metro Cebu North Force | Coming Soon
 
 			<div class="content-wrap">
 
+				<div class="promo promo-full promo-border header-stick bottommargin-lg">
+					<div class="container clearfix">
+						<h3>Call us today at <span>(63)32 231.9177</span> to get more info</h3>
+						<span>We strive to provide Our Customers with Top Notch Support to make their Dreams a Reality</span>
+						<a href="#" class="button button-reveal button-xlarge button-rounded tright"><i class="icon-angle-right"></i><span>Browse Now</span></a>
+					</div>
+				</div>
+
 				<div class="container clearfix">
 
-					<div class="heading-block title-center nobottomborder">
-						<h1>We are currently Under Construction</h1>
-						<span>Please check back again within Some Days as We're Pretty Close</span>
-					</div>
-
-					<div id="countdown-ex1" class="countdown countdown-large divcenter bottommargin" style="max-width:700px;"></div>
-
-					<div class="clear"></div>
-
-					<div class="progress progress-striped active topmargin divcenter" style="height: 10px; max-width:600px;">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-							<span class="sr-only">30% Complete</span>
+					<div class="col_one_third">
+						<div class="feature-box fbox-effect">
+							<div class="fbox-icon">
+								<a href="#"><i class="icon-screen i-alt"></i></a>
+							</div>
+							<h3>Shape your future</h3>
+							<p>Anything is possible when it comes to your career growth at Manulife. You’ll find all the support you need to reach your goals.</p>
 						</div>
 					</div>
 
-					<div class="divider divider-center divider-short divider-margin"><i class="icon-time"></i></div>
+					<div class="col_one_third">
+						<div class="feature-box fbox-effect">
+							<div class="fbox-icon">
+								<a href="#"><i class="icon-eye i-alt"></i></a>
+							</div>
+							<h3>Global Exposure</h3>
+							<p>You’ll work with a global team of colleagues who share your ambition to build a career that brings challenge and opportunity through impactful, transformative and rewarding work.</p>
+						</div>
+					</div>
 
-					<div class="widget-subscribe-form-result"></div>
+					<div class="col_one_third col_last">
+						<div class="feature-box fbox-effect">
+							<div class="fbox-icon">
+								<a href="#"><i class="icon-beaker i-alt"></i></a>
+							</div>
+							<h3>Be A Change-maker</h3>
+							<p>We like to think of our employees as change-makers. They’re innovative, resourceful and they thrive on pushing our company forward with fresh ideas. </p>
+						</div>
+					</div>
 
+					<div class="clear"></div>
+
+					<div class="col_one_third nobottommargin">
+						<div class="feature-box fbox-effect">
+							<div class="fbox-icon">
+								<a href="#"><i class="icon-stack i-alt"></i></a>
+							</div>
+							<h3>Enjoy a work-life balance</h3>
+							<p>From flexible working arrangements to modern offices that promote collaboration and mobility, we’re always looking for new ways to help our employees be happy and healthy.</p>
+						</div>
+					</div>
+
+					<div class="col_one_third nobottommargin">
+						<div class="feature-box fbox-effect">
+							<div class="fbox-icon">
+								<a href="#"><i class="icon-tint i-alt"></i></a>
+							</div>
+							<h3>Maximum Potential</h3>
+							<p>We strengthen our sales force team by providing them opportunities for business and personal growth. </p>
+						</div>
+					</div>
+
+					<div class="col_one_third nobottommargin col_last">
+						<div class="feature-box fbox-effect">
+							<div class="fbox-icon">
+								<a href="#"><i class="icon-text-width i-alt"></i></a>
+							</div>
+							<h3>Professional Development</h3>
+							<p>We invest in the development of our people, and reward superior performance.</p>
+						</div>
+					</div>
+
+					<div class="clear"></div><div class="line"></div>
+{% comment %}
+					<div id="oc-clients-full" class="owl-carousel image-carousel carousel-widget" data-margin="30" data-nav="false" data-loop="true" data-autoplay="5000" data-pagi="false" data-items-xxs="2" data-items-xs="3" data-items-sm="4" data-items-md="5" data-items-lg="6">
+
+						<a href="#"><img src="/images/clients/1.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/2.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/3.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/4.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/5.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/6.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/7.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/8.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/9.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/10.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/11.png" alt="Clients"></a>
+						<a href="#"><img src="/images/clients/12.png" alt="Clients"></a>
+
+					</div>
+{% endcomment %}
 				</div>
 
 			</div>
 
 		</section><!-- #content end -->
 
-		<!-- Footer
-		============================================= -->
-		<footer id="footer" class="dark">
-
-			<!-- Copyrights
-			============================================= -->
-			<div id="copyrights">
-
-				<div class="container clearfix">
-
-					<div class="col_half">
-						Copyrights &copy; 2017 All Rights Reserved by Metro Cebu North Force<br>
-						<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
-					</div>
-
-					<div class="col_half col_last tright">
-						<div class="fright clearfix">
-							<a href="{{ site.facebook }}" class="social-icon si-small si-borderless si-facebook">
-								<i class="icon-facebook"></i>
-								<i class="icon-facebook"></i>
-							</a>
-						</div>
-
-						<div class="clear"></div>
-
-						<i class="icon-envelope2"></i> {{ site.info }} <span class="middot">&middot;</span> <i class="icon-headphones"></i> {{ site.tel }} <span class="middot">&middot;</span> 
-					</div>
-
-				</div>
-
-			</div><!-- #copyrights end -->
-
-		</footer><!-- #footer end -->
+		{% include footer.html %}
 
 	</div><!-- #wrapper end -->
 
@@ -143,13 +157,6 @@ title: Metro Cebu North Force | Coming Soon
 	<!-- Footer Scripts
 	============================================= -->
 	<script type="text/javascript" src="/js/functions.js"></script>
-
-	<script>
-		jQuery(document).ready( function($){
-			var newDate = new Date(2017, 9, 18);
-			$('#countdown-ex1').countdown({until: newDate});
-		});
-	</script>
 
 </body>
 </html>
